# content-lens

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: app_adapter.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ADDING_APPS.md  ARCHITECTURE.md  YOUTUBE_V1.md
src/content_lens/: __init__.py  cli.py  models.py
src/content_lens/apps/: base.py  registry.py  youtube.py
src/content_lens/processors/: artifacts.py  diarization.py  insights.py  pyannote_provider.py  topics.py  visuals.py  vtt.py
src/content_lens/reporters/: html.py  markdown.py
tests/: test_cli.py  test_diarization.py  test_html_reporter.py  test_pyannote_provider.py  test_registry.py  test_rich_artifacts.py  test_visuals.py  test_vtt.py
tests/fixtures/: sample.vtt
